2014-10-13  Per Bothner  <per@bothner.com>

	Add support for r7rs 'define-library'.
	* Compilation.java (process): Checked lexer is non-null before close.
	Don't write sub-module class if it is empty.
	* ModuleExp.java (HAS_SUB_MODULE): New flag.
	* ModuleManager.java (createWithClassName): New factory method.

	* Compilation.java (getGlobalEnvironment): New method.
	(resolve): Use it.

2014-10-13  Per Bothner  <per@bothner.com>

	* Compilation.java (isPedantic, setPedantic): New methods
	(pedantic): Make field private.
	* Language.java: Use setPedantic.
	* Compilation.java (addClass); Tweak to use getModule.
	* BindingInitializer.java: Likewise.

2014-10-01  Per Bothner  <per@bothner.com>

	* ApplyExp.java (getRawType, setType): Move up to ...
	* Expression.java (getRawType, setType): ... here.
	* QuoteExp.java (setType): Update to call super.

2014-09-23  Per Bothner  <per@bothner.com>

	* Compilation.java (info): Remove field, replace by ...
	(getMinfo): New method - uses the info field in ModuleExp.

	* LambdaExp.java (allocChildMethods): Don't call allocMethod on
	child - instead do it lazily.  This avoids an inconsistency where
	the Code attribute is created lazily, and fixes
	Savannah bug #42382 "Assigned but unused argument".
	(compileAsMethod): Call allocMethod if needed.

2014-09-23  Per Bothner  <per@bothner.com>

	* ScopeExp.java (outer): Make private.
	(getOuter, setOuter): New accessor methods.

2014-09-17  Per Bothner  <per@bothner.com>

	* LitTable.java (emit): If a cycle is seen, look for an "init"
	method before checked for a "set" method.  The former is more
	appropriate for immutable-after-initialization methods.
	This fixes Savannah bug 43233 "Dumping circular literals".

2014-09-15  Per Bothner  <per@bothner.com>

	* BindingInitializer.java (emit): Use new Location.define method
	for simple "semi-dynamic" top-level variabls.

2014-09-10  Per Bothner  <per@bothner.com>

	* BindingInitializer.java: Update for new DynamicLocation class.